add getters for tentative and non tentative permsisions
